WEB - instalacion y uso de ngx-mqtt-client, con ERRORES!

--- a/WEB/selectorWeb/.gitignore
+++ b/WEB/selectorWeb/.gitignore
@@ -19,11 +19,12 @@
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
+/.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+../../.vscode/*
 
 # misc
 /.sass-cache
