--- a/WEB/selectorWeb/package.json
+++ b/WEB/selectorWeb/package.json
@@ -1,56 +1,91 @@
 {
-    "name": "selector-web",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --prod",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^5.2.0",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/http": "^5.2.0",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
-        "@angular/router": "^5.2.0",
-        "bootstrap": "^4.1.3",
-        "core-js": "^2.4.1",
-        "jquery": "^3.3.1",
-        "mqtt": "^2.18.0",
-        "ngx-mqtt-client": "^1.3.4",
-        "popper.js": "^1.14.4",
-        "process-nextick-args": "^2.0.0",
-        "rxjs": "^5.5.6",
-        "rxjs-compat": "^6.3.3",
-        "zone.js": "^0.8.19"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.10.0",
-        "@angular/cli": "^7.0.3",
-        "@angular/compiler-cli": "^5.2.0",
-        "@angular/language-service": "^5.2.0",
-        "@types/jasmine": "~2.8.3",
-        "@types/jasminewd2": "~2.0.2",
-        "@types/node": "~6.0.60",
-        "codelyzer": "^4.0.1",
-        "jasmine-core": "~2.8.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^3.1.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "^5.4.1",
-        "ts-node": "~4.1.0",
-        "tslint": "~5.9.1",
-        "typescript": "~2.5.3"
+  "name": "ngx-mqtt-client",
+  "version": "1.3.4",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "packagr": "ng-packagr -p package.json"
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/public_api.ts"
     }
+  },
+  "peerDependencies": {
+    "@angular/core": ">2.0.0",
+    "mqtt": "^2.18.0",
+    "rxjs": ">5.5.0",
+    "typescript": ">2.4.0"
+  },
+  "devDependencies": {
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
+    "@angular/cli": "~1.7.3",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/flex-layout": "^5.0.0-beta.13",
+    "@angular/forms": "^5.2.9",
+    "@angular/language-service": "^5.2.0",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "core-js": "^2.4.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-marbles": "^0.2.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "mqtt": "^2.18.0",
+    "ng-packagr": "^2.4.1",
+    "protractor": "~5.1.2",
+    "puppeteer": "^1.2.0",
+    "rxjs": "^5.5.6",
+    "ts-node": "~4.1.0",
+    "tsickle": "0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3",
+    "zone.js": "^0.8.19"
+  },
+  "description": "Strongly typed reactive mqtt client.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wermerb/ngx-mqtt-client.git"
+  },
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "angular5",
+    "angular-mqtt",
+    "mqtt",
+    "mqtt-client",
+    "ngx-mqtt",
+    "mqtt angular",
+    "angular mqtt"
+  ],
+  "author": "Balázs Wermer <wermerb@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/wermerb/ngx-mqtt-client/issues"
+  },
+  "homepage": "https://github.com/wermerb/ngx-mqtt-client#readme",
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
+  }
 }
