--- a/WEB/selectorWeb/package.json
+++ b/WEB/selectorWeb/package.json
@@ -44,14 +44,14 @@
     "jasmine-core": "~2.8.0",
     "jasmine-marbles": "^0.2.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mqtt": "^2.18.0",
-    "ng-packagr": "^2.4.1",
-    "protractor": "~5.1.2",
+    "ng-packagr": "^4.4.0",
+    "protractor": "^5.4.1",
     "puppeteer": "^1.2.0",
     "rxjs": "^5.5.6",
     "ts-node": "~4.1.0",
