WEB - no hacer seguimiento a carpeta dist

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 WEB/selectorWeb/package-lock.json
 WEB/selectorWeb/node_modules
 .vscode/*
-WEB/selectorWeb/package-lock.json
+WEB/selectorWeb/dist/
